ovirt-host-deploy -- oVirt host deploy

????-??-?? - Version 1.7.0
 * kernel: add capability to enable real-time settings

2016-07-12 - Version 1.5.1
 * hosted-engine: start ha daemon only after vdsm started, rhbz#349532

2016-06-01 - Version 1.5.0

 * hosted-engine: initial support, rhbz#1200469
 * vmconsole: automatic start of ovirt-vmconsole-host-sshd, rhbz#1279434.
 * kernel: automatic configuration of host's boot parameters for VFIO
   passthrough,  rhbz#1301104
 * node: support both legacy and next generation node
 * vdsm: properly configure vdsm before running it, rhbz#1320059
 * i18n: add pt_BR support
 * offline: dropped packaging rhbz#1314790


2015-10-15 - Version 1.4.0

 * tune: tuned: set the tuned profile based on environment variable,
   rhbz#1209418.
 * mgmt: new component to enable host management.
 * offline: pull iptables-services where available, rhbz#1224804.
 * ovirt-vmconsole: initial add.
 * kdump: improve message when service fails, rhbz#1248010.

2015-01-15 - Version 1.3.1

 * gluster: start glusterpmd service after reboot, rhbz#1138198.

2014-10-06 - Version 1.3.0

 * gluster: glusterpmd: support for glusterpmd configuration.
   rhbz#1138198.
 * kdump: initial support. rhbz#1079821.
 * vdsmhooks: fix package installation.
 * vdsm: fix dmidecode output parsing, rhbz#1109342.
 * gluster: Restart nrpe service during host deploy, rhbz#1110623.
 * kdump: support ibm_powerkvm distribution, rhbz#1131177.
 * vdsm: support ibm_powerkvm distribution, rhbz#1131177.

2014-05-02 - Version 1.2.1

 * vdsmhooks: use short distribution name as suffix.
 * hardware: fix typo in debug message.
 * gluster: nrpe: add nrpe configuration support. rhbz#1091978.

2014-03-28 - Version 1.2.0

2014-01-20 - Version 1.2.0_beta

 * vdsm: packages: stop libvirtd before using vdsm-tool to configure it.
   rhbz#999853.
 * vdsm: packages: adjust to new method of vdsm configure.
 * vdsm: packages: always restart libvirtd. rhbz#1043524.