@@ -187,6 +187,7 @@ AC_CONFIG_FILES([
 	src/plugins/ovirt-host-common/vdsm/Makefile
 	src/plugins/ovirt-host-common/vmconsole/Makefile
 	src/plugins/ovirt-host-deploy/Makefile
+	src/plugins/ovirt-host-deploy/cockpit/Makefile
 	src/plugins/ovirt-host-deploy/core/Makefile
 	src/plugins/ovirt-host-deploy/host/Makefile
 	src/plugins/ovirt-host-deploy/gluster/Makefile
