@@ -2,6 +2,7 @@ ovirt-host-deploy -- oVirt host deploy
 
 ????-??-?? - Version 1.7.0
  * kernel: add capability to enable real-time settings
+ * cockpit: enable and start the service if it exists
 
 2016-07-12 - Version 1.5.1
  * hosted-engine: start ha daemon only after vdsm started, rhbz#349532
